--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "express": "^4.18.2",
         "mongoose": "^7.1.0",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.22"
+        "node-geocoder": "^4.2.0",
+        "nodemon": "^2.0.22",
+        "slugify": "^1.6.6"
     }
 }
